syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.jiache.grpc";
option java_outer_classname = "HelloProto";

package io.jiache.grpc;

service GreeterRpc {
    rpc sayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest{
    string name = 1;
}

message HelloReply {
    string result = 1;
}